// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UniversalNavbarExpanded> matches snapshot builds with sample links and animated desktop only background 1`] = `
<div
  className="navbarWrapper"
>
  <div
    className="navbar"
  >
    <ScrollDetector>
      <div
        className="laptopAndUp animatedBackground"
      >
        <div
          className="laptopAndUpContainer"
        >
          <div
            className="flex itemsCenter"
          >
            <NavLink
              href="/#/Components/UniversalNavbarExpanded"
              itemLabel="Logo"
            >
              <svg
                className="logo"
                viewBox="0 0 83 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Ethos Logo
                </title>
                <path
                  d="M11.6369 0.200348V3.32171H3.07416V6.44307H10.5316V9.53622H3.07416V12.6852H11.6369V15.7784H0V0.200348H11.6369Z"
                  fill="#056257"
                />
                <path
                  d="M46.3605 9.53622V6.44307V3.32171V0.200348H43.2863V6.44307H36.3666V3.32171V0.200348H33.2924V15.7784H36.3666V12.6852V9.53622H43.2863V15.7784H46.3605V12.6852V9.53622Z"
                  fill="#056257"
                />
                <path
                  d="M23.9934 15.7784H20.9181V3.32171H15.9298V0.200348H28.9805V3.32171H23.9922V6.44307V15.7784"
                  fill="#056257"
                />
                <path
                  d="M82.5756 2.73281L80.2159 4.63257C80.2159 4.63257 79.106 2.86291 76.3565 2.86291C73.607 2.86291 73.7768 4.58248 73.7768 4.58248C73.7768 4.58248 73.6968 5.40226 74.6266 5.79257C75.5563 6.18231 77.5343 6.49778 78.4963 6.7626C79.2746 6.97675 80.4611 7.26978 81.3857 7.98362C82.3845 8.75504 82.8848 9.57597 82.8848 11.1522C82.8848 12.942 81.9257 13.9218 81.9257 13.9218C81.9257 13.9218 80.4156 16 76.8366 16C73.2576 16 71.4373 14.3714 71.4373 14.3714C71.4373 14.3714 70.4275 13.6317 69.7476 12.6415L72.3129 10.8114C72.3129 10.8114 73.4786 13.0773 76.8228 13.0773C80.1669 13.0773 79.559 11.0284 79.559 11.0284C79.559 11.0284 79.3823 10.2576 78.2344 9.9352C77.1388 9.62778 76.836 9.63411 74.2742 8.99395C71.0694 8.19375 70.477 5.90598 70.4811 4.75922C70.4845 3.73104 70.781 2.39143 72.3751 1.14392C73.9703 -0.104167 76.5488 0.00348611 76.5488 0.00348611C76.5488 0.00348611 80.0368 -0.210668 82.5756 2.73281Z"
                  fill="#056257"
                />
                <path
                  d="M55.203 11.2063C53.028 9.03135 51.6959 5.03092 54.1506 0.801941L53.0033 1.94928C49.8399 5.11267 49.8399 10.242 53.0033 13.4054C56.1673 16.5694 61.296 16.5694 64.46 13.4054L65.6073 12.2581C61.5798 14.5994 57.5719 13.5752 55.203 11.2063Z"
                  fill="#056257"
                />
                <path
                  d="M64.5872 1.82205C62.4261 -0.339649 58.9213 -0.339649 56.7591 1.82205C56.4465 2.13464 55.7959 2.86634 55.5737 3.22672C57.7072 1.91128 60.5379 2.17264 62.387 4.02231C64.2286 5.86393 64.4957 8.6773 63.1993 10.8079L63.5245 10.5609C63.8826 10.3007 64.3299 9.90869 64.5878 9.65078C66.7495 7.48909 66.7495 3.98489 64.5878 1.82262L64.5872 1.82205Z"
                  fill="#056257"
                />
              </svg>
            </NavLink>
            <DropdownNav
              links={
                Object {
                  "ACCOUNT": Object {
                    "href": "/login/",
                    "title": "Account",
                  },
                  "CTA": Object {
                    "href": "/term",
                    "title": "Check my price",
                  },
                  "INDEX": Object {
                    "href": "/",
                  },
                  "NAVLINKS": Array [
                    Object {
                      "id": "NAVLINKS_MOCK_ID_1",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": [Function],
                          "href": "/#/Components/UniversalNavbarExpanded",
                          "id": "NAVLINKS_MOCK_ID_2",
                          "subcopy": "Learn more about term life insurance and the plans and options you have available.",
                          "title": "Watch the video",
                        },
                        "items": Array [
                          Object {
                            "href": "/#/Components/UniversalNavbarExpanded",
                            "id": "NAVLINKS_MOCK_ID_3",
                            "title": "What is term life insurance and how much does it cost?",
                          },
                          Object {
                            "href": "/how-it-works/",
                            "id": "NAVLINKS_MOCK_ID_4",
                            "title": "How our application process works",
                          },
                          Object {
                            "href": "/life/who-needs-life-insurance/",
                            "id": "NAVLINKS_MOCK_ID_5",
                            "title": "Do I need life insurance?",
                          },
                          Object {
                            "href": "/life/how-choose-right-type-life-insurance/",
                            "id": "NAVLINKS_MOCK_ID_6",
                            "title": "Choosing your coverage amount and term length",
                          },
                          Object {
                            "href": "/app/needs/",
                            "id": "NAVLINKS_MOCK_ID_7",
                            "title": "Coverage calculator",
                          },
                        ],
                      },
                      "title": "What we offer",
                    },
                    Object {
                      "hasExpandedNav": true,
                      "id": "NAVLINKS_MOCK_ID_8",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": false,
                          "ctaText": "Learn more",
                          "href": "/life/life-insurance-basics/",
                          "id": "NAVLINKS_MOCK_ID_9",
                          "subcopy": "A handy guide to life insurance",
                          "title": "Life insurance 101",
                        },
                        "items": Array [
                          Object {
                            "category": "Life insurance",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "No medical exam life insurance",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Life insurance Rates by Age",
                              },
                              Object {
                                "href": "/life/pick-beneficiary/",
                                "id": "NAVLINKS_MOCK_ID_12",
                                "title": "$500K Life Insurance",
                              },
                              Object {
                                "href": "/life/who-needs-sp/",
                                "id": "NAVLINKS_MOCK_ID_13",
                                "title": "$1 Million Life Insurance",
                              },
                            ],
                          },
                          Object {
                            "category": "Term Life",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "Term Life Insurance",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Term Insurance Lengths",
                              },
                              Object {
                                "href": "/life/pick-beneficiary/",
                                "id": "NAVLINKS_MOCK_ID_12",
                                "title": "Term Life Expires Options",
                              },
                              Object {
                                "href": "/life/who-needs-sp/",
                                "id": "NAVLINKS_MOCK_ID_13",
                                "title": "Converting Term to Whole",
                              },
                            ],
                          },
                          Object {
                            "category": "Whole Life",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "Whole Life Insurance",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Term Insurance Lengths",
                              },
                            ],
                          },
                          Object {
                            "category": "Final Expenses",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "End of Life Expenses",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Burial Insurance",
                              },
                            ],
                          },
                          Object {
                            "category": "Resources",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "How much life insurance do i need?",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "How is cost determined",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Coverage Calculator",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Life insurance Blog",
                              },
                            ],
                          },
                        ],
                      },
                      "title": "Life insurance basics",
                    },
                    Object {
                      "id": "NAVLINKS_MOCK_ID_15",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": false,
                          "href": "/why-ethos/",
                          "id": "NAVLINKS_MOCK_ID_16",
                          "subcopy": "We put people before profit. Find out how we bring our policyholders the best experience possible.",
                          "title": "The Ethos Difference",
                        },
                        "items": Array [
                          Object {
                            "href": "/about/",
                            "id": "NAVLINKS_MOCK_ID_17",
                            "title": "Our mission",
                          },
                          Object {
                            "href": "/reviews/",
                            "id": "NAVLINKS_MOCK_ID_18",
                            "title": "Reviews",
                          },
                          Object {
                            "href": "/life/customer-stories/",
                            "id": "NAVLINKS_MOCK_ID_19",
                            "title": "Customer stories",
                          },
                          Object {
                            "href": "/life/ethosforgood/",
                            "id": "NAVLINKS_MOCK_ID_20",
                            "title": "Ethos for Good",
                          },
                          Object {
                            "href": "/friends/",
                            "id": "NAVLINKS_MOCK_ID_21",
                            "title": "Refer a friend",
                          },
                        ],
                      },
                      "title": "Why Ethos",
                    },
                    Object {
                      "id": "NAVLINKS_MOCK_ID_22",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": false,
                          "href": "/faq/",
                          "id": "NAVLINKS_MOCK_ID_23",
                          "subcopy": "Life insurance can be complicated, but don’t worry. We’re here to help answer your questions.",
                          "title": "FAQ",
                        },
                        "items": Array [
                          Object {
                            "href": "/faq/life-insurance-basics/",
                            "id": "NAVLINKS_MOCK_ID_24",
                            "title": "Questions about life insurance",
                          },
                          Object {
                            "href": "/faq/ethos/",
                            "id": "NAVLINKS_MOCK_ID_25",
                            "title": "Questions about Ethos",
                          },
                          Object {
                            "href": "/faq/application/",
                            "id": "NAVLINKS_MOCK_ID_26",
                            "title": "Questions about your application",
                          },
                          Object {
                            "href": "/faq/policy/",
                            "id": "NAVLINKS_MOCK_ID_27",
                            "title": "Questions about your policy",
                          },
                          Object {
                            "href": "/contact-us/",
                            "id": "NAVLINKS_MOCK_ID_28",
                            "title": "Contact us",
                          },
                        ],
                      },
                      "title": "Help Center",
                    },
                  ],
                  "SEARCH": Object {
                    "href": "/search/",
                    "title": "Search",
                  },
                  "SECONDARY_CTA": Object {
                    "href": "/login",
                    "title": "Login",
                  },
                }
              }
            />
          </div>
          <div
            className="flex itemsCenter"
          >
            <React.Fragment>
              <SearchIconLink />
              <AccountIconLink />
            </React.Fragment>
            <div
              className="cta"
              id="universal-navbar-expanded-button-outer"
            >
              <CtaButton
                buttonStyle="Black"
                hideOnMobile={false}
                href="/term"
                id="universal-navbar-expanded-button-inner"
                title="Check my price"
                trackingFunction={[Function]}
              />
            </div>
          </div>
        </div>
      </div>
    </ScrollDetector>
  </div>
</div>
`;

exports[`<UniversalNavbarExpanded> matches snapshot builds with sample links and fully animated background 1`] = `
<div
  className="navbarWrapper"
>
  <div
    className="navbar"
  >
    <ScrollDetector>
      <div
        className="laptopAndUp animatedBackground"
      >
        <div
          className="laptopAndUpContainer"
        >
          <div
            className="flex itemsCenter"
          >
            <NavLink
              href="/#/Components/UniversalNavbarExpanded"
              itemLabel="Logo"
            >
              <svg
                className="logo"
                viewBox="0 0 83 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Ethos Logo
                </title>
                <path
                  d="M11.6369 0.200348V3.32171H3.07416V6.44307H10.5316V9.53622H3.07416V12.6852H11.6369V15.7784H0V0.200348H11.6369Z"
                  fill="#056257"
                />
                <path
                  d="M46.3605 9.53622V6.44307V3.32171V0.200348H43.2863V6.44307H36.3666V3.32171V0.200348H33.2924V15.7784H36.3666V12.6852V9.53622H43.2863V15.7784H46.3605V12.6852V9.53622Z"
                  fill="#056257"
                />
                <path
                  d="M23.9934 15.7784H20.9181V3.32171H15.9298V0.200348H28.9805V3.32171H23.9922V6.44307V15.7784"
                  fill="#056257"
                />
                <path
                  d="M82.5756 2.73281L80.2159 4.63257C80.2159 4.63257 79.106 2.86291 76.3565 2.86291C73.607 2.86291 73.7768 4.58248 73.7768 4.58248C73.7768 4.58248 73.6968 5.40226 74.6266 5.79257C75.5563 6.18231 77.5343 6.49778 78.4963 6.7626C79.2746 6.97675 80.4611 7.26978 81.3857 7.98362C82.3845 8.75504 82.8848 9.57597 82.8848 11.1522C82.8848 12.942 81.9257 13.9218 81.9257 13.9218C81.9257 13.9218 80.4156 16 76.8366 16C73.2576 16 71.4373 14.3714 71.4373 14.3714C71.4373 14.3714 70.4275 13.6317 69.7476 12.6415L72.3129 10.8114C72.3129 10.8114 73.4786 13.0773 76.8228 13.0773C80.1669 13.0773 79.559 11.0284 79.559 11.0284C79.559 11.0284 79.3823 10.2576 78.2344 9.9352C77.1388 9.62778 76.836 9.63411 74.2742 8.99395C71.0694 8.19375 70.477 5.90598 70.4811 4.75922C70.4845 3.73104 70.781 2.39143 72.3751 1.14392C73.9703 -0.104167 76.5488 0.00348611 76.5488 0.00348611C76.5488 0.00348611 80.0368 -0.210668 82.5756 2.73281Z"
                  fill="#056257"
                />
                <path
                  d="M55.203 11.2063C53.028 9.03135 51.6959 5.03092 54.1506 0.801941L53.0033 1.94928C49.8399 5.11267 49.8399 10.242 53.0033 13.4054C56.1673 16.5694 61.296 16.5694 64.46 13.4054L65.6073 12.2581C61.5798 14.5994 57.5719 13.5752 55.203 11.2063Z"
                  fill="#056257"
                />
                <path
                  d="M64.5872 1.82205C62.4261 -0.339649 58.9213 -0.339649 56.7591 1.82205C56.4465 2.13464 55.7959 2.86634 55.5737 3.22672C57.7072 1.91128 60.5379 2.17264 62.387 4.02231C64.2286 5.86393 64.4957 8.6773 63.1993 10.8079L63.5245 10.5609C63.8826 10.3007 64.3299 9.90869 64.5878 9.65078C66.7495 7.48909 66.7495 3.98489 64.5878 1.82262L64.5872 1.82205Z"
                  fill="#056257"
                />
              </svg>
            </NavLink>
            <DropdownNav
              links={
                Object {
                  "ACCOUNT": Object {
                    "href": "/login/",
                    "title": "Account",
                  },
                  "CTA": Object {
                    "href": "/term",
                    "title": "Check my price",
                  },
                  "INDEX": Object {
                    "href": "/",
                  },
                  "NAVLINKS": Array [
                    Object {
                      "id": "NAVLINKS_MOCK_ID_1",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": [Function],
                          "href": "/#/Components/UniversalNavbarExpanded",
                          "id": "NAVLINKS_MOCK_ID_2",
                          "subcopy": "Learn more about term life insurance and the plans and options you have available.",
                          "title": "Watch the video",
                        },
                        "items": Array [
                          Object {
                            "href": "/#/Components/UniversalNavbarExpanded",
                            "id": "NAVLINKS_MOCK_ID_3",
                            "title": "What is term life insurance and how much does it cost?",
                          },
                          Object {
                            "href": "/how-it-works/",
                            "id": "NAVLINKS_MOCK_ID_4",
                            "title": "How our application process works",
                          },
                          Object {
                            "href": "/life/who-needs-life-insurance/",
                            "id": "NAVLINKS_MOCK_ID_5",
                            "title": "Do I need life insurance?",
                          },
                          Object {
                            "href": "/life/how-choose-right-type-life-insurance/",
                            "id": "NAVLINKS_MOCK_ID_6",
                            "title": "Choosing your coverage amount and term length",
                          },
                          Object {
                            "href": "/app/needs/",
                            "id": "NAVLINKS_MOCK_ID_7",
                            "title": "Coverage calculator",
                          },
                        ],
                      },
                      "title": "What we offer",
                    },
                    Object {
                      "hasExpandedNav": true,
                      "id": "NAVLINKS_MOCK_ID_8",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": false,
                          "ctaText": "Learn more",
                          "href": "/life/life-insurance-basics/",
                          "id": "NAVLINKS_MOCK_ID_9",
                          "subcopy": "A handy guide to life insurance",
                          "title": "Life insurance 101",
                        },
                        "items": Array [
                          Object {
                            "category": "Life insurance",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "No medical exam life insurance",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Life insurance Rates by Age",
                              },
                              Object {
                                "href": "/life/pick-beneficiary/",
                                "id": "NAVLINKS_MOCK_ID_12",
                                "title": "$500K Life Insurance",
                              },
                              Object {
                                "href": "/life/who-needs-sp/",
                                "id": "NAVLINKS_MOCK_ID_13",
                                "title": "$1 Million Life Insurance",
                              },
                            ],
                          },
                          Object {
                            "category": "Term Life",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "Term Life Insurance",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Term Insurance Lengths",
                              },
                              Object {
                                "href": "/life/pick-beneficiary/",
                                "id": "NAVLINKS_MOCK_ID_12",
                                "title": "Term Life Expires Options",
                              },
                              Object {
                                "href": "/life/who-needs-sp/",
                                "id": "NAVLINKS_MOCK_ID_13",
                                "title": "Converting Term to Whole",
                              },
                            ],
                          },
                          Object {
                            "category": "Whole Life",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "Whole Life Insurance",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Term Insurance Lengths",
                              },
                            ],
                          },
                          Object {
                            "category": "Final Expenses",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "End of Life Expenses",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Burial Insurance",
                              },
                            ],
                          },
                          Object {
                            "category": "Resources",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "How much life insurance do i need?",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "How is cost determined",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Coverage Calculator",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Life insurance Blog",
                              },
                            ],
                          },
                        ],
                      },
                      "title": "Life insurance basics",
                    },
                    Object {
                      "id": "NAVLINKS_MOCK_ID_15",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": false,
                          "href": "/why-ethos/",
                          "id": "NAVLINKS_MOCK_ID_16",
                          "subcopy": "We put people before profit. Find out how we bring our policyholders the best experience possible.",
                          "title": "The Ethos Difference",
                        },
                        "items": Array [
                          Object {
                            "href": "/about/",
                            "id": "NAVLINKS_MOCK_ID_17",
                            "title": "Our mission",
                          },
                          Object {
                            "href": "/reviews/",
                            "id": "NAVLINKS_MOCK_ID_18",
                            "title": "Reviews",
                          },
                          Object {
                            "href": "/life/customer-stories/",
                            "id": "NAVLINKS_MOCK_ID_19",
                            "title": "Customer stories",
                          },
                          Object {
                            "href": "/life/ethosforgood/",
                            "id": "NAVLINKS_MOCK_ID_20",
                            "title": "Ethos for Good",
                          },
                          Object {
                            "href": "/friends/",
                            "id": "NAVLINKS_MOCK_ID_21",
                            "title": "Refer a friend",
                          },
                        ],
                      },
                      "title": "Why Ethos",
                    },
                    Object {
                      "id": "NAVLINKS_MOCK_ID_22",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": false,
                          "href": "/faq/",
                          "id": "NAVLINKS_MOCK_ID_23",
                          "subcopy": "Life insurance can be complicated, but don’t worry. We’re here to help answer your questions.",
                          "title": "FAQ",
                        },
                        "items": Array [
                          Object {
                            "href": "/faq/life-insurance-basics/",
                            "id": "NAVLINKS_MOCK_ID_24",
                            "title": "Questions about life insurance",
                          },
                          Object {
                            "href": "/faq/ethos/",
                            "id": "NAVLINKS_MOCK_ID_25",
                            "title": "Questions about Ethos",
                          },
                          Object {
                            "href": "/faq/application/",
                            "id": "NAVLINKS_MOCK_ID_26",
                            "title": "Questions about your application",
                          },
                          Object {
                            "href": "/faq/policy/",
                            "id": "NAVLINKS_MOCK_ID_27",
                            "title": "Questions about your policy",
                          },
                          Object {
                            "href": "/contact-us/",
                            "id": "NAVLINKS_MOCK_ID_28",
                            "title": "Contact us",
                          },
                        ],
                      },
                      "title": "Help Center",
                    },
                  ],
                  "SEARCH": Object {
                    "href": "/search/",
                    "title": "Search",
                  },
                  "SECONDARY_CTA": Object {
                    "href": "/login",
                    "title": "Login",
                  },
                }
              }
            />
          </div>
          <div
            className="flex itemsCenter"
          >
            <React.Fragment>
              <SearchIconLink />
              <AccountIconLink />
            </React.Fragment>
            <div
              className="cta"
              id="universal-navbar-expanded-button-outer"
            >
              <CtaButton
                buttonStyle="Black"
                hideOnMobile={false}
                href="/term"
                id="universal-navbar-expanded-button-inner"
                title="Check my price"
                trackingFunction={[Function]}
              />
            </div>
          </div>
        </div>
      </div>
    </ScrollDetector>
  </div>
</div>
`;

exports[`<UniversalNavbarExpanded> matches snapshot builds with sample links provided 1`] = `
<div
  className="navbarWrapper"
>
  <div
    className="navbar"
  >
    <ScrollDetector>
      <div
        className="laptopAndUp"
      >
        <div
          className="laptopAndUpContainer"
        >
          <div
            className="flex itemsCenter"
          >
            <NavLink
              href="/"
              itemLabel="Logo"
            >
              <svg
                className="logo"
                viewBox="0 0 83 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Ethos Logo
                </title>
                <path
                  d="M11.6369 0.200348V3.32171H3.07416V6.44307H10.5316V9.53622H3.07416V12.6852H11.6369V15.7784H0V0.200348H11.6369Z"
                  fill="#056257"
                />
                <path
                  d="M46.3605 9.53622V6.44307V3.32171V0.200348H43.2863V6.44307H36.3666V3.32171V0.200348H33.2924V15.7784H36.3666V12.6852V9.53622H43.2863V15.7784H46.3605V12.6852V9.53622Z"
                  fill="#056257"
                />
                <path
                  d="M23.9934 15.7784H20.9181V3.32171H15.9298V0.200348H28.9805V3.32171H23.9922V6.44307V15.7784"
                  fill="#056257"
                />
                <path
                  d="M82.5756 2.73281L80.2159 4.63257C80.2159 4.63257 79.106 2.86291 76.3565 2.86291C73.607 2.86291 73.7768 4.58248 73.7768 4.58248C73.7768 4.58248 73.6968 5.40226 74.6266 5.79257C75.5563 6.18231 77.5343 6.49778 78.4963 6.7626C79.2746 6.97675 80.4611 7.26978 81.3857 7.98362C82.3845 8.75504 82.8848 9.57597 82.8848 11.1522C82.8848 12.942 81.9257 13.9218 81.9257 13.9218C81.9257 13.9218 80.4156 16 76.8366 16C73.2576 16 71.4373 14.3714 71.4373 14.3714C71.4373 14.3714 70.4275 13.6317 69.7476 12.6415L72.3129 10.8114C72.3129 10.8114 73.4786 13.0773 76.8228 13.0773C80.1669 13.0773 79.559 11.0284 79.559 11.0284C79.559 11.0284 79.3823 10.2576 78.2344 9.9352C77.1388 9.62778 76.836 9.63411 74.2742 8.99395C71.0694 8.19375 70.477 5.90598 70.4811 4.75922C70.4845 3.73104 70.781 2.39143 72.3751 1.14392C73.9703 -0.104167 76.5488 0.00348611 76.5488 0.00348611C76.5488 0.00348611 80.0368 -0.210668 82.5756 2.73281Z"
                  fill="#056257"
                />
                <path
                  d="M55.203 11.2063C53.028 9.03135 51.6959 5.03092 54.1506 0.801941L53.0033 1.94928C49.8399 5.11267 49.8399 10.242 53.0033 13.4054C56.1673 16.5694 61.296 16.5694 64.46 13.4054L65.6073 12.2581C61.5798 14.5994 57.5719 13.5752 55.203 11.2063Z"
                  fill="#056257"
                />
                <path
                  d="M64.5872 1.82205C62.4261 -0.339649 58.9213 -0.339649 56.7591 1.82205C56.4465 2.13464 55.7959 2.86634 55.5737 3.22672C57.7072 1.91128 60.5379 2.17264 62.387 4.02231C64.2286 5.86393 64.4957 8.6773 63.1993 10.8079L63.5245 10.5609C63.8826 10.3007 64.3299 9.90869 64.5878 9.65078C66.7495 7.48909 66.7495 3.98489 64.5878 1.82262L64.5872 1.82205Z"
                  fill="#056257"
                />
              </svg>
            </NavLink>
            <DropdownNav
              links={
                Object {
                  "ACCOUNT": Object {
                    "href": "/login/",
                    "title": "Account",
                  },
                  "CTA": Object {
                    "href": "/term",
                    "title": "Check my price",
                  },
                  "INDEX": Object {
                    "href": "/",
                  },
                  "NAVLINKS": Array [
                    Object {
                      "id": "NAVLINKS_MOCK_ID_1",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": [Function],
                          "href": "/#/Components/UniversalNavbarExpanded",
                          "id": "NAVLINKS_MOCK_ID_2",
                          "subcopy": "Learn more about term life insurance and the plans and options you have available.",
                          "title": "Watch the video",
                        },
                        "items": Array [
                          Object {
                            "href": "/#/Components/UniversalNavbarExpanded",
                            "id": "NAVLINKS_MOCK_ID_3",
                            "title": "What is term life insurance and how much does it cost?",
                          },
                          Object {
                            "href": "/how-it-works/",
                            "id": "NAVLINKS_MOCK_ID_4",
                            "title": "How our application process works",
                          },
                          Object {
                            "href": "/life/who-needs-life-insurance/",
                            "id": "NAVLINKS_MOCK_ID_5",
                            "title": "Do I need life insurance?",
                          },
                          Object {
                            "href": "/life/how-choose-right-type-life-insurance/",
                            "id": "NAVLINKS_MOCK_ID_6",
                            "title": "Choosing your coverage amount and term length",
                          },
                          Object {
                            "href": "/app/needs/",
                            "id": "NAVLINKS_MOCK_ID_7",
                            "title": "Coverage calculator",
                          },
                        ],
                      },
                      "title": "What we offer",
                    },
                    Object {
                      "hasExpandedNav": true,
                      "id": "NAVLINKS_MOCK_ID_8",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": false,
                          "ctaText": "Learn more",
                          "href": "/life/life-insurance-basics/",
                          "id": "NAVLINKS_MOCK_ID_9",
                          "subcopy": "A handy guide to life insurance",
                          "title": "Life insurance 101",
                        },
                        "items": Array [
                          Object {
                            "category": "Life insurance",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "No medical exam life insurance",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Life insurance Rates by Age",
                              },
                              Object {
                                "href": "/life/pick-beneficiary/",
                                "id": "NAVLINKS_MOCK_ID_12",
                                "title": "$500K Life Insurance",
                              },
                              Object {
                                "href": "/life/who-needs-sp/",
                                "id": "NAVLINKS_MOCK_ID_13",
                                "title": "$1 Million Life Insurance",
                              },
                            ],
                          },
                          Object {
                            "category": "Term Life",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "Term Life Insurance",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Term Insurance Lengths",
                              },
                              Object {
                                "href": "/life/pick-beneficiary/",
                                "id": "NAVLINKS_MOCK_ID_12",
                                "title": "Term Life Expires Options",
                              },
                              Object {
                                "href": "/life/who-needs-sp/",
                                "id": "NAVLINKS_MOCK_ID_13",
                                "title": "Converting Term to Whole",
                              },
                            ],
                          },
                          Object {
                            "category": "Whole Life",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "Whole Life Insurance",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Term Insurance Lengths",
                              },
                            ],
                          },
                          Object {
                            "category": "Final Expenses",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "End of Life Expenses",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Burial Insurance",
                              },
                            ],
                          },
                          Object {
                            "category": "Resources",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "How much life insurance do i need?",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "How is cost determined",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Coverage Calculator",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Life insurance Blog",
                              },
                            ],
                          },
                        ],
                      },
                      "title": "Life insurance basics",
                    },
                    Object {
                      "id": "NAVLINKS_MOCK_ID_15",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": false,
                          "href": "/why-ethos/",
                          "id": "NAVLINKS_MOCK_ID_16",
                          "subcopy": "We put people before profit. Find out how we bring our policyholders the best experience possible.",
                          "title": "The Ethos Difference",
                        },
                        "items": Array [
                          Object {
                            "href": "/about/",
                            "id": "NAVLINKS_MOCK_ID_17",
                            "title": "Our mission",
                          },
                          Object {
                            "href": "/reviews/",
                            "id": "NAVLINKS_MOCK_ID_18",
                            "title": "Reviews",
                          },
                          Object {
                            "href": "/life/customer-stories/",
                            "id": "NAVLINKS_MOCK_ID_19",
                            "title": "Customer stories",
                          },
                          Object {
                            "href": "/life/ethosforgood/",
                            "id": "NAVLINKS_MOCK_ID_20",
                            "title": "Ethos for Good",
                          },
                          Object {
                            "href": "/friends/",
                            "id": "NAVLINKS_MOCK_ID_21",
                            "title": "Refer a friend",
                          },
                        ],
                      },
                      "title": "Why Ethos",
                    },
                    Object {
                      "id": "NAVLINKS_MOCK_ID_22",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": false,
                          "href": "/faq/",
                          "id": "NAVLINKS_MOCK_ID_23",
                          "subcopy": "Life insurance can be complicated, but don’t worry. We’re here to help answer your questions.",
                          "title": "FAQ",
                        },
                        "items": Array [
                          Object {
                            "href": "/faq/life-insurance-basics/",
                            "id": "NAVLINKS_MOCK_ID_24",
                            "title": "Questions about life insurance",
                          },
                          Object {
                            "href": "/faq/ethos/",
                            "id": "NAVLINKS_MOCK_ID_25",
                            "title": "Questions about Ethos",
                          },
                          Object {
                            "href": "/faq/application/",
                            "id": "NAVLINKS_MOCK_ID_26",
                            "title": "Questions about your application",
                          },
                          Object {
                            "href": "/faq/policy/",
                            "id": "NAVLINKS_MOCK_ID_27",
                            "title": "Questions about your policy",
                          },
                          Object {
                            "href": "/contact-us/",
                            "id": "NAVLINKS_MOCK_ID_28",
                            "title": "Contact us",
                          },
                        ],
                      },
                      "title": "Help Center",
                    },
                  ],
                  "SEARCH": Object {
                    "href": "/search/",
                    "title": "Search",
                  },
                  "SECONDARY_CTA": Object {
                    "href": "/login",
                    "title": "Login",
                  },
                }
              }
            />
          </div>
          <div
            className="flex itemsCenter"
          >
            <React.Fragment>
              <SearchIconLink />
              <AccountIconLink />
            </React.Fragment>
            <div
              className="cta"
              id="universal-navbar-expanded-button-outer"
            >
              <CtaButton
                buttonStyle="Black"
                hideOnMobile={false}
                href="/term"
                id="universal-navbar-expanded-button-inner"
                title="Check my price"
                trackingFunction={[Function]}
              />
            </div>
          </div>
        </div>
      </div>
    </ScrollDetector>
  </div>
</div>
`;

exports[`<UniversalNavbarExpanded> matches snapshot builds with sample links provided and estimateExperiment enabled 1`] = `
<div
  className="navbarWrapper"
>
  <div
    className="navbar"
  >
    <ScrollDetector>
      <div
        className="laptopAndUp"
      >
        <div
          className="laptopAndUpContainer"
        >
          <div
            className="flex itemsCenter"
          >
            <NavLink
              href="/"
              itemLabel="Logo"
            >
              <svg
                className="logo"
                viewBox="0 0 83 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Ethos Logo
                </title>
                <path
                  d="M11.6369 0.200348V3.32171H3.07416V6.44307H10.5316V9.53622H3.07416V12.6852H11.6369V15.7784H0V0.200348H11.6369Z"
                  fill="#056257"
                />
                <path
                  d="M46.3605 9.53622V6.44307V3.32171V0.200348H43.2863V6.44307H36.3666V3.32171V0.200348H33.2924V15.7784H36.3666V12.6852V9.53622H43.2863V15.7784H46.3605V12.6852V9.53622Z"
                  fill="#056257"
                />
                <path
                  d="M23.9934 15.7784H20.9181V3.32171H15.9298V0.200348H28.9805V3.32171H23.9922V6.44307V15.7784"
                  fill="#056257"
                />
                <path
                  d="M82.5756 2.73281L80.2159 4.63257C80.2159 4.63257 79.106 2.86291 76.3565 2.86291C73.607 2.86291 73.7768 4.58248 73.7768 4.58248C73.7768 4.58248 73.6968 5.40226 74.6266 5.79257C75.5563 6.18231 77.5343 6.49778 78.4963 6.7626C79.2746 6.97675 80.4611 7.26978 81.3857 7.98362C82.3845 8.75504 82.8848 9.57597 82.8848 11.1522C82.8848 12.942 81.9257 13.9218 81.9257 13.9218C81.9257 13.9218 80.4156 16 76.8366 16C73.2576 16 71.4373 14.3714 71.4373 14.3714C71.4373 14.3714 70.4275 13.6317 69.7476 12.6415L72.3129 10.8114C72.3129 10.8114 73.4786 13.0773 76.8228 13.0773C80.1669 13.0773 79.559 11.0284 79.559 11.0284C79.559 11.0284 79.3823 10.2576 78.2344 9.9352C77.1388 9.62778 76.836 9.63411 74.2742 8.99395C71.0694 8.19375 70.477 5.90598 70.4811 4.75922C70.4845 3.73104 70.781 2.39143 72.3751 1.14392C73.9703 -0.104167 76.5488 0.00348611 76.5488 0.00348611C76.5488 0.00348611 80.0368 -0.210668 82.5756 2.73281Z"
                  fill="#056257"
                />
                <path
                  d="M55.203 11.2063C53.028 9.03135 51.6959 5.03092 54.1506 0.801941L53.0033 1.94928C49.8399 5.11267 49.8399 10.242 53.0033 13.4054C56.1673 16.5694 61.296 16.5694 64.46 13.4054L65.6073 12.2581C61.5798 14.5994 57.5719 13.5752 55.203 11.2063Z"
                  fill="#056257"
                />
                <path
                  d="M64.5872 1.82205C62.4261 -0.339649 58.9213 -0.339649 56.7591 1.82205C56.4465 2.13464 55.7959 2.86634 55.5737 3.22672C57.7072 1.91128 60.5379 2.17264 62.387 4.02231C64.2286 5.86393 64.4957 8.6773 63.1993 10.8079L63.5245 10.5609C63.8826 10.3007 64.3299 9.90869 64.5878 9.65078C66.7495 7.48909 66.7495 3.98489 64.5878 1.82262L64.5872 1.82205Z"
                  fill="#056257"
                />
              </svg>
            </NavLink>
            <DropdownNav
              links={
                Object {
                  "ACCOUNT": Object {
                    "href": "/login/",
                    "title": "Account",
                  },
                  "CTA": Object {
                    "href": "/term",
                    "title": "Check my price",
                  },
                  "INDEX": Object {
                    "href": "/",
                  },
                  "NAVLINKS": Array [
                    Object {
                      "id": "NAVLINKS_MOCK_ID_1",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": [Function],
                          "href": "/#/Components/UniversalNavbarExpanded",
                          "id": "NAVLINKS_MOCK_ID_2",
                          "subcopy": "Learn more about term life insurance and the plans and options you have available.",
                          "title": "Watch the video",
                        },
                        "items": Array [
                          Object {
                            "href": "/#/Components/UniversalNavbarExpanded",
                            "id": "NAVLINKS_MOCK_ID_3",
                            "title": "What is term life insurance and how much does it cost?",
                          },
                          Object {
                            "href": "/how-it-works/",
                            "id": "NAVLINKS_MOCK_ID_4",
                            "title": "How our application process works",
                          },
                          Object {
                            "href": "/life/who-needs-life-insurance/",
                            "id": "NAVLINKS_MOCK_ID_5",
                            "title": "Do I need life insurance?",
                          },
                          Object {
                            "href": "/life/how-choose-right-type-life-insurance/",
                            "id": "NAVLINKS_MOCK_ID_6",
                            "title": "Choosing your coverage amount and term length",
                          },
                          Object {
                            "href": "/app/needs/",
                            "id": "NAVLINKS_MOCK_ID_7",
                            "title": "Coverage calculator",
                          },
                        ],
                      },
                      "title": "What we offer",
                    },
                    Object {
                      "hasExpandedNav": true,
                      "id": "NAVLINKS_MOCK_ID_8",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": false,
                          "ctaText": "Learn more",
                          "href": "/life/life-insurance-basics/",
                          "id": "NAVLINKS_MOCK_ID_9",
                          "subcopy": "A handy guide to life insurance",
                          "title": "Life insurance 101",
                        },
                        "items": Array [
                          Object {
                            "category": "Life insurance",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "No medical exam life insurance",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Life insurance Rates by Age",
                              },
                              Object {
                                "href": "/life/pick-beneficiary/",
                                "id": "NAVLINKS_MOCK_ID_12",
                                "title": "$500K Life Insurance",
                              },
                              Object {
                                "href": "/life/who-needs-sp/",
                                "id": "NAVLINKS_MOCK_ID_13",
                                "title": "$1 Million Life Insurance",
                              },
                            ],
                          },
                          Object {
                            "category": "Term Life",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "Term Life Insurance",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Term Insurance Lengths",
                              },
                              Object {
                                "href": "/life/pick-beneficiary/",
                                "id": "NAVLINKS_MOCK_ID_12",
                                "title": "Term Life Expires Options",
                              },
                              Object {
                                "href": "/life/who-needs-sp/",
                                "id": "NAVLINKS_MOCK_ID_13",
                                "title": "Converting Term to Whole",
                              },
                            ],
                          },
                          Object {
                            "category": "Whole Life",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "Whole Life Insurance",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Term Insurance Lengths",
                              },
                            ],
                          },
                          Object {
                            "category": "Final Expenses",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "End of Life Expenses",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Burial Insurance",
                              },
                            ],
                          },
                          Object {
                            "category": "Resources",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "How much life insurance do i need?",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "How is cost determined",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Coverage Calculator",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Life insurance Blog",
                              },
                            ],
                          },
                        ],
                      },
                      "title": "Life insurance basics",
                    },
                    Object {
                      "id": "NAVLINKS_MOCK_ID_15",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": false,
                          "href": "/why-ethos/",
                          "id": "NAVLINKS_MOCK_ID_16",
                          "subcopy": "We put people before profit. Find out how we bring our policyholders the best experience possible.",
                          "title": "The Ethos Difference",
                        },
                        "items": Array [
                          Object {
                            "href": "/about/",
                            "id": "NAVLINKS_MOCK_ID_17",
                            "title": "Our mission",
                          },
                          Object {
                            "href": "/reviews/",
                            "id": "NAVLINKS_MOCK_ID_18",
                            "title": "Reviews",
                          },
                          Object {
                            "href": "/life/customer-stories/",
                            "id": "NAVLINKS_MOCK_ID_19",
                            "title": "Customer stories",
                          },
                          Object {
                            "href": "/life/ethosforgood/",
                            "id": "NAVLINKS_MOCK_ID_20",
                            "title": "Ethos for Good",
                          },
                          Object {
                            "href": "/friends/",
                            "id": "NAVLINKS_MOCK_ID_21",
                            "title": "Refer a friend",
                          },
                        ],
                      },
                      "title": "Why Ethos",
                    },
                    Object {
                      "id": "NAVLINKS_MOCK_ID_22",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": false,
                          "href": "/faq/",
                          "id": "NAVLINKS_MOCK_ID_23",
                          "subcopy": "Life insurance can be complicated, but don’t worry. We’re here to help answer your questions.",
                          "title": "FAQ",
                        },
                        "items": Array [
                          Object {
                            "href": "/faq/life-insurance-basics/",
                            "id": "NAVLINKS_MOCK_ID_24",
                            "title": "Questions about life insurance",
                          },
                          Object {
                            "href": "/faq/ethos/",
                            "id": "NAVLINKS_MOCK_ID_25",
                            "title": "Questions about Ethos",
                          },
                          Object {
                            "href": "/faq/application/",
                            "id": "NAVLINKS_MOCK_ID_26",
                            "title": "Questions about your application",
                          },
                          Object {
                            "href": "/faq/policy/",
                            "id": "NAVLINKS_MOCK_ID_27",
                            "title": "Questions about your policy",
                          },
                          Object {
                            "href": "/contact-us/",
                            "id": "NAVLINKS_MOCK_ID_28",
                            "title": "Contact us",
                          },
                        ],
                      },
                      "title": "Help Center",
                    },
                  ],
                  "SEARCH": Object {
                    "href": "/search/",
                    "title": "Search",
                  },
                  "SECONDARY_CTA": Object {
                    "href": "/login",
                    "title": "Login",
                  },
                }
              }
            />
          </div>
          <div
            className="flex itemsCenter"
          >
            <React.Fragment>
              <ExperimentCopy />
              <SearchIconLink />
              <AccountIconLink />
            </React.Fragment>
            <div
              className="cta"
              id="universal-navbar-expanded-button-outer"
            >
              <CtaButton
                buttonStyle="Black"
                hideOnMobile={false}
                href="/term"
                id="universal-navbar-expanded-button-inner"
                title="Check my price"
                trackingFunction={[Function]}
              />
            </div>
          </div>
        </div>
      </div>
    </ScrollDetector>
  </div>
</div>
`;

exports[`<UniversalNavbarExpanded> matches snapshot builds with sample links, hidden icons and secondary cta 1`] = `
<div
  className="navbarWrapper"
>
  <div
    className="navbar"
  >
    <ScrollDetector>
      <div
        className="laptopAndUp"
      >
        <div
          className="laptopAndUpContainer"
        >
          <div
            className="flex itemsCenter"
          >
            <NavLink
              href="/#/Components/UniversalNavbarExpanded"
              itemLabel="Logo"
            >
              <svg
                className="logo"
                viewBox="0 0 83 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  Ethos Logo
                </title>
                <path
                  d="M11.6369 0.200348V3.32171H3.07416V6.44307H10.5316V9.53622H3.07416V12.6852H11.6369V15.7784H0V0.200348H11.6369Z"
                  fill="#056257"
                />
                <path
                  d="M46.3605 9.53622V6.44307V3.32171V0.200348H43.2863V6.44307H36.3666V3.32171V0.200348H33.2924V15.7784H36.3666V12.6852V9.53622H43.2863V15.7784H46.3605V12.6852V9.53622Z"
                  fill="#056257"
                />
                <path
                  d="M23.9934 15.7784H20.9181V3.32171H15.9298V0.200348H28.9805V3.32171H23.9922V6.44307V15.7784"
                  fill="#056257"
                />
                <path
                  d="M82.5756 2.73281L80.2159 4.63257C80.2159 4.63257 79.106 2.86291 76.3565 2.86291C73.607 2.86291 73.7768 4.58248 73.7768 4.58248C73.7768 4.58248 73.6968 5.40226 74.6266 5.79257C75.5563 6.18231 77.5343 6.49778 78.4963 6.7626C79.2746 6.97675 80.4611 7.26978 81.3857 7.98362C82.3845 8.75504 82.8848 9.57597 82.8848 11.1522C82.8848 12.942 81.9257 13.9218 81.9257 13.9218C81.9257 13.9218 80.4156 16 76.8366 16C73.2576 16 71.4373 14.3714 71.4373 14.3714C71.4373 14.3714 70.4275 13.6317 69.7476 12.6415L72.3129 10.8114C72.3129 10.8114 73.4786 13.0773 76.8228 13.0773C80.1669 13.0773 79.559 11.0284 79.559 11.0284C79.559 11.0284 79.3823 10.2576 78.2344 9.9352C77.1388 9.62778 76.836 9.63411 74.2742 8.99395C71.0694 8.19375 70.477 5.90598 70.4811 4.75922C70.4845 3.73104 70.781 2.39143 72.3751 1.14392C73.9703 -0.104167 76.5488 0.00348611 76.5488 0.00348611C76.5488 0.00348611 80.0368 -0.210668 82.5756 2.73281Z"
                  fill="#056257"
                />
                <path
                  d="M55.203 11.2063C53.028 9.03135 51.6959 5.03092 54.1506 0.801941L53.0033 1.94928C49.8399 5.11267 49.8399 10.242 53.0033 13.4054C56.1673 16.5694 61.296 16.5694 64.46 13.4054L65.6073 12.2581C61.5798 14.5994 57.5719 13.5752 55.203 11.2063Z"
                  fill="#056257"
                />
                <path
                  d="M64.5872 1.82205C62.4261 -0.339649 58.9213 -0.339649 56.7591 1.82205C56.4465 2.13464 55.7959 2.86634 55.5737 3.22672C57.7072 1.91128 60.5379 2.17264 62.387 4.02231C64.2286 5.86393 64.4957 8.6773 63.1993 10.8079L63.5245 10.5609C63.8826 10.3007 64.3299 9.90869 64.5878 9.65078C66.7495 7.48909 66.7495 3.98489 64.5878 1.82262L64.5872 1.82205Z"
                  fill="#056257"
                />
              </svg>
            </NavLink>
            <DropdownNav
              links={
                Object {
                  "ACCOUNT": Object {
                    "href": "/login/",
                    "title": "Account",
                  },
                  "CTA": Object {
                    "href": "/term",
                    "title": "Check my price",
                  },
                  "INDEX": Object {
                    "href": "/",
                  },
                  "NAVLINKS": Array [
                    Object {
                      "id": "NAVLINKS_MOCK_ID_1",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": [Function],
                          "href": "/#/Components/UniversalNavbarExpanded",
                          "id": "NAVLINKS_MOCK_ID_2",
                          "subcopy": "Learn more about term life insurance and the plans and options you have available.",
                          "title": "Watch the video",
                        },
                        "items": Array [
                          Object {
                            "href": "/#/Components/UniversalNavbarExpanded",
                            "id": "NAVLINKS_MOCK_ID_3",
                            "title": "What is term life insurance and how much does it cost?",
                          },
                          Object {
                            "href": "/how-it-works/",
                            "id": "NAVLINKS_MOCK_ID_4",
                            "title": "How our application process works",
                          },
                          Object {
                            "href": "/life/who-needs-life-insurance/",
                            "id": "NAVLINKS_MOCK_ID_5",
                            "title": "Do I need life insurance?",
                          },
                          Object {
                            "href": "/life/how-choose-right-type-life-insurance/",
                            "id": "NAVLINKS_MOCK_ID_6",
                            "title": "Choosing your coverage amount and term length",
                          },
                          Object {
                            "href": "/app/needs/",
                            "id": "NAVLINKS_MOCK_ID_7",
                            "title": "Coverage calculator",
                          },
                        ],
                      },
                      "title": "What we offer",
                    },
                    Object {
                      "hasExpandedNav": true,
                      "id": "NAVLINKS_MOCK_ID_8",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": false,
                          "ctaText": "Learn more",
                          "href": "/life/life-insurance-basics/",
                          "id": "NAVLINKS_MOCK_ID_9",
                          "subcopy": "A handy guide to life insurance",
                          "title": "Life insurance 101",
                        },
                        "items": Array [
                          Object {
                            "category": "Life insurance",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "No medical exam life insurance",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Life insurance Rates by Age",
                              },
                              Object {
                                "href": "/life/pick-beneficiary/",
                                "id": "NAVLINKS_MOCK_ID_12",
                                "title": "$500K Life Insurance",
                              },
                              Object {
                                "href": "/life/who-needs-sp/",
                                "id": "NAVLINKS_MOCK_ID_13",
                                "title": "$1 Million Life Insurance",
                              },
                            ],
                          },
                          Object {
                            "category": "Term Life",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "Term Life Insurance",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Term Insurance Lengths",
                              },
                              Object {
                                "href": "/life/pick-beneficiary/",
                                "id": "NAVLINKS_MOCK_ID_12",
                                "title": "Term Life Expires Options",
                              },
                              Object {
                                "href": "/life/who-needs-sp/",
                                "id": "NAVLINKS_MOCK_ID_13",
                                "title": "Converting Term to Whole",
                              },
                            ],
                          },
                          Object {
                            "category": "Whole Life",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "Whole Life Insurance",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Term Insurance Lengths",
                              },
                            ],
                          },
                          Object {
                            "category": "Final Expenses",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "End of Life Expenses",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Burial Insurance",
                              },
                            ],
                          },
                          Object {
                            "category": "Resources",
                            "items": Array [
                              Object {
                                "href": "/life/term-group-whole/",
                                "id": "NAVLINKS_MOCK_ID_10",
                                "title": "How much life insurance do i need?",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "How is cost determined",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Coverage Calculator",
                              },
                              Object {
                                "href": "/life/underwriting-explained/",
                                "id": "NAVLINKS_MOCK_ID_11",
                                "title": "Life insurance Blog",
                              },
                            ],
                          },
                        ],
                      },
                      "title": "Life insurance basics",
                    },
                    Object {
                      "id": "NAVLINKS_MOCK_ID_15",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": false,
                          "href": "/why-ethos/",
                          "id": "NAVLINKS_MOCK_ID_16",
                          "subcopy": "We put people before profit. Find out how we bring our policyholders the best experience possible.",
                          "title": "The Ethos Difference",
                        },
                        "items": Array [
                          Object {
                            "href": "/about/",
                            "id": "NAVLINKS_MOCK_ID_17",
                            "title": "Our mission",
                          },
                          Object {
                            "href": "/reviews/",
                            "id": "NAVLINKS_MOCK_ID_18",
                            "title": "Reviews",
                          },
                          Object {
                            "href": "/life/customer-stories/",
                            "id": "NAVLINKS_MOCK_ID_19",
                            "title": "Customer stories",
                          },
                          Object {
                            "href": "/life/ethosforgood/",
                            "id": "NAVLINKS_MOCK_ID_20",
                            "title": "Ethos for Good",
                          },
                          Object {
                            "href": "/friends/",
                            "id": "NAVLINKS_MOCK_ID_21",
                            "title": "Refer a friend",
                          },
                        ],
                      },
                      "title": "Why Ethos",
                    },
                    Object {
                      "id": "NAVLINKS_MOCK_ID_22",
                      "subnav": Object {
                        "cta": Object {
                          "alternateIcon": false,
                          "href": "/faq/",
                          "id": "NAVLINKS_MOCK_ID_23",
                          "subcopy": "Life insurance can be complicated, but don’t worry. We’re here to help answer your questions.",
                          "title": "FAQ",
                        },
                        "items": Array [
                          Object {
                            "href": "/faq/life-insurance-basics/",
                            "id": "NAVLINKS_MOCK_ID_24",
                            "title": "Questions about life insurance",
                          },
                          Object {
                            "href": "/faq/ethos/",
                            "id": "NAVLINKS_MOCK_ID_25",
                            "title": "Questions about Ethos",
                          },
                          Object {
                            "href": "/faq/application/",
                            "id": "NAVLINKS_MOCK_ID_26",
                            "title": "Questions about your application",
                          },
                          Object {
                            "href": "/faq/policy/",
                            "id": "NAVLINKS_MOCK_ID_27",
                            "title": "Questions about your policy",
                          },
                          Object {
                            "href": "/contact-us/",
                            "id": "NAVLINKS_MOCK_ID_28",
                            "title": "Contact us",
                          },
                        ],
                      },
                      "title": "Help Center",
                    },
                  ],
                  "SEARCH": Object {
                    "href": "/search/",
                    "title": "Search",
                  },
                  "SECONDARY_CTA": Object {
                    "href": "/login",
                    "title": "Login",
                  },
                }
              }
            />
          </div>
          <div
            className="flex itemsCenter"
          >
            <React.Fragment>
              <a
                href="/login"
              >
                Login
              </a>
            </React.Fragment>
            <div
              className="cta"
              id="universal-navbar-expanded-button-outer"
            >
              <CtaButton
                buttonStyle="Black"
                hideOnMobile={false}
                href="/term"
                id="universal-navbar-expanded-button-inner"
                title="Check my price"
                trackingFunction={[Function]}
              />
            </div>
          </div>
        </div>
      </div>
    </ScrollDetector>
  </div>
</div>
`;
